@@ -2,12 +2,12 @@
     "error": false,
     "donate_url": "https://paypal.me/lucchetto",
     "website_url": "https://revengeos.com/",
-    "news_url": "https://t.me/RevengeOSNews",
-    "datetime": 1597711975.9914615,
-    "filename": "RevengeOS-3.2-Q-OFFICIAL-taimen-20200817-2345.zip",
+    "news_url": "https://t.me/DripRomChat",
+    "datetime": 1597747542.6830819,
+    "filename": "RevengeOS-3.2-Q-OFFICIAL-taimen-20200818-0930.zip",
     "id": "",
-    "size": "653740596",
-    "url": "https://osdn.net/frs/redir.php?f=%2Fstorage%2Fg%2Fr%2Fre%2Frevengeos%2Ftaimen%2FRevengeOS-3.2-Q-OFFICIAL-taimen-20200817-2345.zip",
+    "size": "653740384",
+    "url": "https://osdn.net/frs/redir.php?f=%2Fstorage%2Fg%2Fr%2Fre%2Frevengeos%2Ftaimen%2FRevengeOS-3.2-Q-OFFICIAL-taimen-20200818-0930.zip",
     "version": "3.2",
-    "filehash": "99677c4579a84f9541c4485b5dcbb830"
+    "filehash": "c36582eeb8b9a93c9662340fb73b2f02"
 }
